--- a/flux-readonly/flux-deployment.yaml
+++ b/flux-readonly/flux-deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -22,7 +21,6 @@ spec:
         beta.kubernetes.io/os: linux
       serviceAccountName: flux
       volumes:
-
       # The following volume is for using a customised known_hosts
       # file, which you will need to do if you host your own git
       # repo rather than using github or the like. You'll also need to
@@ -49,7 +47,6 @@ spec:
       #   secret:
       #     secretName: flux-gpg-keys
       #     defaultMode: 0400
-
       containers:
       - name: flux
         # There are no ":latest" images for flux. Find the most recent
@@ -76,7 +73,6 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 5
         volumeMounts:
-
         # Include this if you need to mount a customised known_hosts
         # file; you'll also need the volume declared above.
         # - name: ssh-config
@@ -107,9 +103,7 @@ spec:
         # envFrom:
         # - secretRef:
         #     name: flux-git-auth
-
         args:
-
         # If you deployed memcached in a different namespace to flux,
         # or with a different service name, you can supply these
         # following two arguments to tell fluxd how to connect to it.
@@ -119,11 +113,10 @@ spec:
         # readonly, effectively disabling automation entirely
         - --registry-disable-scanning
         - --git-readonly
-
         # Replace the following URL to change the Git repository used by Flux.
         # HTTP basic auth credentials can be supplied using environment variables:
         # https://$(GIT_AUTHUSER):$(GIT_AUTHKEY)@github.com/user/repository.git
-        - --git-url=git@github.com:fluxcd/flux-get-started
+        - --git-url=git@github.com:fluxcd/flux-get-started # {"$ref":"#/definitions/io.k8s.cli.substitutions.git-url-arg"}
         - --git-branch=master
         # Include this if you want to restrict the manifests considered by flux
         # to those under the following relative paths in the git repository
@@ -131,15 +124,14 @@ spec:
 
         # This is disabled by default, but best to be explicit
         - --manifest-generation=false
-
         # Serve /metrics endpoint at different port;
         # make sure to set prometheus' annotation to scrape the port value.
         - --listen-metrics=:3031
 
-      # Optional DNS settings, configuring the ndots option may resolve
-      # nslookup issues on some Kubernetes setups.
-      # dnsPolicy: "None"
-      # dnsConfig:
-      #   options:
-      #     - name: ndots
-      #       value: "1"
+# Optional DNS settings, configuring the ndots option may resolve
+# nslookup issues on some Kubernetes setups.
+# dnsPolicy: "None"
+# dnsConfig:
+#   options:
+#     - name: ndots
+#       value: "1"
