--- a/flux-readonly/flux-account.yaml
+++ b/flux-readonly/flux-account.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     name: flux
   name: flux
-  namespace: flux
+  namespace: flux-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -35,4 +35,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: flux
-    namespace: flux
+    namespace: flux-system
