--- a/flux-readonly/flux-deployment.yaml
+++ b/flux-readonly/flux-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flux
-  namespace: flux
+  namespace: flux-system
 spec:
   replicas: 1
   selector:
