Change namespace of ArgoCD components
.. using

    jk transform ./bin/renamespace.jk -p namespace=argocd-system --overwrite argocd/*.yaml

--- a/argocd/argocd-tls-certs-cm-configmap.yaml
+++ b/argocd/argocd-tls-certs-cm-configmap.yaml
@@ -6,3 +6,4 @@ metadata:
     app.kubernetes.io/name: argocd-tls-certs-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-tls-certs-cm
+  namespace: argocd-system
