--- a/argocd/argocd-dex-server-rolebinding.yaml
+++ b/argocd/argocd-dex-server-rolebinding.yaml
@@ -6,6 +6,7 @@ metadata:
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/part-of: argocd
   name: argocd-dex-server
+  namespace: argocd-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
