--- a/argocd/argocd-dex-server-serviceaccount.yaml
+++ b/argocd/argocd-dex-server-serviceaccount.yaml
@@ -6,3 +6,4 @@ metadata:
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/part-of: argocd
   name: argocd-dex-server
+  namespace: argocd-system
