--- a/argocd/argocd-server-deployment.yaml
+++ b/argocd/argocd-server-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/part-of: argocd
   name: argocd-server
+  namespace: argocd-system
 spec:
   selector:
     matchLabels:
