--- a/argocd/argocd-server-metrics-service.yaml
+++ b/argocd/argocd-server-metrics-service.yaml
@@ -6,6 +6,7 @@ metadata:
     app.kubernetes.io/name: argocd-server-metrics
     app.kubernetes.io/part-of: argocd
   name: argocd-server-metrics
+  namespace: argocd-system
 spec:
   ports:
   - name: metrics
