--- a/argocd/argocd-ssh-known-hosts-cm-configmap.yaml
+++ b/argocd/argocd-ssh-known-hosts-cm-configmap.yaml
@@ -14,3 +14,4 @@ metadata:
     app.kubernetes.io/name: argocd-ssh-known-hosts-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-ssh-known-hosts-cm
+  namespace: argocd-system
