--- a/argocd/argocd-secret-secret.yaml
+++ b/argocd/argocd-secret-secret.yaml
@@ -5,5 +5,5 @@ metadata:
     app.kubernetes.io/name: argocd-secret
     app.kubernetes.io/part-of: argocd
   name: argocd-secret
-  namespace: argocd-system
+  namespace: argocd-system # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
 type: Opaque
