--- a/argocd/argocd-application-controller-deployment.yaml
+++ b/argocd/argocd-application-controller-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: argocd-application-controller
     app.kubernetes.io/part-of: argocd
   name: argocd-application-controller
-  namespace: argocd-system
+  namespace: argocd-system # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
 spec:
   selector:
     matchLabels:
