--- a/argocd/argocd-cm-configmap.yaml
+++ b/argocd/argocd-cm-configmap.yaml
@@ -5,4 +5,4 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
-  namespace: argocd-system
+  namespace: argocd-system # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
