--- a/argocd/argocd-dex-server-role.yaml
+++ b/argocd/argocd-dex-server-role.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/part-of: argocd
   name: argocd-dex-server
-  namespace: argocd-system
+  namespace: argocd-system # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
 rules:
 - apiGroups:
   - ""
