--- a/argocd/argocd-metrics-service.yaml
+++ b/argocd/argocd-metrics-service.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: argocd-metrics
     app.kubernetes.io/part-of: argocd
   name: argocd-metrics
-  namespace: argocd-system
+  namespace: argocd-system # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
 spec:
   ports:
   - name: metrics
