--- a/argocd/argocd-server-serviceaccount.yaml
+++ b/argocd/argocd-server-serviceaccount.yaml
@@ -6,4 +6,4 @@ metadata:
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/part-of: argocd
   name: argocd-server
-  namespace: argocd-system
+  namespace: argocd-system # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
