--- a/argocd/argocd-tls-certs-cm-configmap.yaml
+++ b/argocd/argocd-tls-certs-cm-configmap.yaml
@@ -6,4 +6,4 @@ metadata:
     app.kubernetes.io/name: argocd-tls-certs-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-tls-certs-cm
-  namespace: argocd-system
+  namespace: argocd-system # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
